--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body style="scroll-behavior: smooth">
     <header
@@ -552,7 +552,7 @@ style="background-color: var(--header-bg-color); color: var(--text-color);"
 
 
     </script>
-    <script src="index.js"></script>
-    <script src="contactUs.js"></script>
+    <script src="./js/index.js"></script>
+    <script src="./js/contactUs.js"></script>
   </body>
 </html>
