--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body class="" style="background-color: var(--bg-color)">
     <!-- About Section -->
@@ -160,6 +160,6 @@
       <p>&copy; 2024 CyberMall. All rights reserved.</p>
     </footer>
 
-    <script src="index.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
