--- a/blogs.html
+++ b/blogs.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CyberMall Blog</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body class="bg-gray-100 text-gray-800">
     <!-- Hero Section -->
@@ -55,6 +55,6 @@
       <p>&copy; 2024 CyberMall. All rights reserved.</p>
     </footer>
 
-    <script src="blogs.js"></script>
+    <script src="./js/blogs.js"></script>
   </body>
 </html>
